workaround for a spacing bug between blockquote / callout and heading

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -148,12 +148,14 @@ code[class*="language-"]:hover {
 
 .metadata-property-value[data-property-type="tags"],
 .metadata-property-value[data-property-type="aliases"] {
+
   .multi-select-pill {
     line-height: var(--line-height-tight);
 
     .multi-select-pill-content {
       margin: 0.1rem 0.3rem;
     }
+
     .multi-select-pill-remove-button {
       display: none;
       visibility: hidden;
@@ -294,4 +296,10 @@ pre[class*="language-"] {
 body:not(.is-ios):not(.is-android) input[type="date"]:not([disabled="true"]),
 body:not(.is-ios):not(.is-android) input[type="datetime-local"]:not([disabled="true"]) {
   padding-left: var(--size-4-2);
+}
+
+// there is a bug where there is no spacing between a blockquote or callout and a subsequent heading.
+// https://forum.obsidian.md/t/79019
+.markdown-rendered div:is(.el-div, .el-blockquote) + div > :is(h1,h2,h3,h4,h5,h6) {
+  margin-top: var(--heading-spacing);
 }
